visual updating four

--- a/PokeAPI.css
+++ b/PokeAPI.css
@@ -8,7 +8,7 @@ body {
 }
 
 .jumbotron {
-  background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.5); 
   text-align: center;
   padding: 10px;
   font-weight: bold;
@@ -27,6 +27,7 @@ body {
 }
 
 .navbar a {
+  /* justify-content: center; */
   /* display: flex; */
   /* justify-content: flex-start; */
   margin-left: 20px;
@@ -50,6 +51,11 @@ body {
   text-align: center;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
+  /* background-color: rgba(0, 0, 0, 0.5);  */
+}
+
+.carousel {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .title {
@@ -70,62 +76,28 @@ h1 {
   /* background-color: #f9f9f9; */
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .nav_search {
   justify-content: end;
 }
 
-.navbar {
-  align-items: end;
-  padding: 10px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  color:#0e0e0e
+.search-title{
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.navbar a {
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 20px;
-  color: #0e0e0e;
-  text-decoration: none;
-  font-weight: bold;
+#search-button {
+  color: white;
+  background-color: crimson;
+
+}
+.all_poke {
+  justify-content: center;
 }
 
+/* .all_poke:hover {
+  transform: scale(5.5)
+  curser
 
-  .container {
-    color: #e3dbdb;
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
-   
-  }
-
-  .title {
-    text-align: center;
-    color: #e3dbdb;
-    
-  }
-
-  h1 {
-    text-align: center;
-    color: #dad7d7;
-  }
-
-  #pokemon-info {
-    color: #e3dbdb;
-    margin-top: 20px;
-    padding: 20px;
-    text-align: center;
-    /* background-color: #f9f9f9; */
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-
- 
+} */
